Autoswitching of modes added, some more dark mode styling fixed.

--- a/src/itzfx/fxml/css/dark-mode.css
+++ b/src/itzfx/fxml/css/dark-mode.css
@@ -105,6 +105,10 @@ and open the template in the editor.
     -fx-border-color:-black-base;
 }
 
+.default-stroke {
+    -fx-stroke:-black-base;
+}
+
 .invert-background {
     -fx-background-color:white;
 }
@@ -115,6 +119,10 @@ and open the template in the editor.
 
 .invert-border {
     -fx-border-color:white;
+}
+
+.invert-stroke {
+    -fx-stroke:white;
 }
 
 /*
@@ -227,7 +235,7 @@ Mobile Goal Stuff
 .blue-mobile-goal > .sep, .red-mobile-goal > .sep,
 .blue-mobile-goal > .mid, .red-mobile-goal > .mid,
 .blue-mobile-goal > .tip, .red-mobile-goal > .tip {
-    -fx-effect:dropshadow(three-pass-box, black, 10, 0, 0, 0);
+    -fx-effect:dropshadow(three-pass-box, black, 20, 0, 0, 0);
 }
 
 .blue-mobile-goal > .base, .red-mobile-goal > .base, .blue-mobile-goal > .mid, .red-mobile-goal > .mid,
